[package]
name = "datafusion"
version = "0.1.0"
authors = ["Andrew Lamb <andrew@nerdnetworks.org>"]
edition = "2021"
description = "Re-exports datafusion at a specific version"

[dependencies]

# Rename to workaround doctest bug
# Turn off optional datafusion features (e.g. don't get support for crypto functions or avro)
upstream = { path = '/Users/alamb/Software/arrow-datafusion/datafusion/core', default-features = false, package = "datafusion" }
datafusion-proto = { path = '/Users/alamb/Software/arrow-datafusion/datafusion/proto' }
workspace-hack = { path = "../workspace-hack"}
