[package]
name = "datafusion"
version = "0.1.0"
authors = ["Andrew Lamb <andrew@nerdnetworks.org>"]
edition = "2021"
description = "Re-exports datafusion at a specific version"

[dependencies]

# Rename to workaround doctest bug
# Turn off optional datafusion features (e.g. don't get support for crypto functions or avro)
upstream = { git = "https://github.com/waynexia/arrow-datafusion.git", branch="fix-2712", default-features = false, package = "datafusion" }
datafusion-proto = { git = "https://github.com/waynexia/arrow-datafusion.git", branch="fix-2712" }
workspace-hack = { path = "../workspace-hack"}
