[package]
name = "iox_regex"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = { version = "14.0.0", features = ["prettyprint"] }
# chrono = { version = "0.4", default-features = false }
datafusion = { path = "../datafusion" }
# itertools = "0.10.2"
lazy_static = "1.4.0"
# observability_deps = { path = "../observability_deps" }
regex = "1"
regex-syntax = "0.6.26"
# schema = { path = "../schema" }
# snafu = "0.7"
workspace-hack = { path = "../workspace-hack"}

[dev-dependencies]
tokio = { version = "1.18", features = ["macros", "parking_lot"] }
datafusion_util = { path = "../datafusion_util" }
